--- a/Web CV.css
+++ b/Web CV.css
@@ -1,7 +1,11 @@
-body {
-  background-color: grey !important;
 
-  /* margin: auto !important; */
+
+body {
+  /* margin-left: 10%;
+  margin-right: 10%; */
+  background-color: grey;
+
+  
 }
 .a {
   color: black;
@@ -10,30 +14,29 @@ body {
   color: black;
 }
 
-/* :root{
-    --couleur-principale: RGB(0,168,168);
-} */
-
 .titre {
   text-align: center;
   background-color: var(--couleur-principale);
+  font-size: 1.25vw;
 }
-
-.card {
+.title-space{
+  font-size: 2vw;
+  margin-top: 2px!important;
+}
+/* .card {
   text-align: center;
   background-color: var(--couleur-principale);
-}
+} */
 div {
   background-color: var(--couleur-principale);
 }
 h1 {
-  background-color: var(--couleur-principale);
+  background-color: var(--couleur-principale)!important;
+}
+h6{
+  font-size: 2vw!important;
 }
 
-/* #map {
-  display: flex;
-  border-radius: 50%, 50%;
-} */
 
 .separationWhite {
   background-color: beige;
@@ -44,15 +47,15 @@ h1 {
 
 .row {
   display: flex;
-  margin-top: 25px;
+  margin-top: 0px;
   margin-left: 25px;
   margin-right: 25px;
 }
 
 #titleEffect {
-  width: 15% !important;
-  box-shadow: -7px 7px 0px #dee2e6 !important;
-  background-color: RGB(0, 168, 168) !important;
+  width: 18vw !important;
+  box-shadow: -7px 7px 0px #dee2e6;
+  background-color: RGB(0, 168, 168);
 }
 
 #test {
@@ -75,6 +78,7 @@ h1 {
 #couleurBlanc {
   color: #fffefd !important;
   padding-bottom: 10px !important;
+  
 }
 #whrite {
   background-color: #fffefd !important;
@@ -95,104 +99,8 @@ h1 {
   margin-top: 20px !important;
 }
 
-.icon-csharp {
-  size: 120px;
-}
 
-@font-face {
-  font-family: "pack-cv";
-  src: url("fonts/pack-cv.eot");
-  src: url("fonts/pack-cv.eot?#iefix") format("embedded-opentype"),
-    url("fonts/pack-cv.woff") format("woff"),
-    url("fonts/pack-cv.ttf") format("truetype"),
-    url("fonts/pack-cv.svg#pack-cv") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
 
-[data-icon]:before {
-  font-family: "pack-cv" !important;
-  content: attr(data-icon);
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
-  
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-  font-family: "pack-cv" !important;
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
- 
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-csharp:before {
-  color: RGB(155, 79, 150);
-  content: "\61";
-  font-size: 100px;
-}
-.icon-illustrator:before {
-  content: "\63";
-  font-size: 100px;
-}
-.icon-indesign:before {
-  content: "\64";
-  font-size: 100px;
-}
-.icon-javascript:before {
-  color: RGB(240, 219, 79);
-  content: "\65";
-  font-size: 100px;
-}
-.icon-photoshop:before {
-  content: "\67";
-  font-size: 100px;
-}
-.icon-react:before {
-  color: RGB(0, 169, 217);
-  content: "\68";
-  font-size: 100px;
-}
-.icon-html5:before {
-  color: RGB(241, 101, 41);
-  content: "\6a";
-  font-size: 100px;
-}
-.icon-css3:before {
-  color: RGB(33, 150, 243);
-  content: "\6b";
-  font-size: 100px;
-}
-.icon-mysql:before {
-  color: RGB(0, 92, 132);
-  content: "\62";
-  font-size: 100px;
-}
-.icon-nodejs:before {
-  color: RGB(114, 174, 64);
-  content: "\66";
-  font-size: 100px;
-}
-.icon-php:before {
-  color: RGB(92, 122, 173);
-  content: "\69";
-  font-size: 100px;
-}
-.icon-bootstrap:before {
-  color: RGB(82, 58, 118);
-  content: "\6c";
-  font-size: 100px;
-}
 
 #myButton {
 	box-shadow: 3px 4px 0px 0px #156783;
@@ -208,14 +116,7 @@ h1 {
 	padding:7px 25px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #e1e2ed;
-}
-#impression:hover {
-	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
-	background-color:#bab1ba;
-}
-#impression:active {
-	position:relative;
-	top:1px;
+ 
 }
 
 #impression {
@@ -229,30 +130,42 @@ h1 {
 	color:#3a8a9e;
 	font-family:Arial;
 	font-size:17px;
-	padding:7px 25px;
+	/* padding:7px 25px; */
 	text-decoration:none;
 	text-shadow:0px 1px 0px #e1e2ed;
+  position: absolute;
+  top : 0px;
 }
-/* #impression:hover {
-	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
-	background-color:#bab1ba;
-}
-#impression:active {
-	position:relative;
-	top:1px;
-} */
+
 
 
 #top{
-    height: 15px;
-    background-color: white
+  margin-left: 0px!important;
+    background-color: white;
+    height: 35px;
 }
 
-/* 
-@media (min-width: 768px) and (max-width: 1199.98px){} */
+@media (min-width: 768px) and (max-width: 1199.98px){}
 
 @media print {
-    body{
-        color: red;
-    }
+  body{
+    margin-left: 0px;
+    margin-right: 0px;
   }
+  #test1{
+    margin: 0px;
+  }
+
+   
+  #impression{
+    display: none;
+    
+  }
+  #invisible{
+    display: none;
+  }
+  #top{
+    display: none;
+  }
+ 
+}
